# alduin

./: LICENSE  README.md  pyproject.toml
alduin/: main.py  personality.py  tool.py  ui.py
